# neo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/neo/: IApplication.h  JSON.h  Primitives.h  Terminal.h
lib/include/neo/math/: Color.h  Math.h  Rectangle.h  Vector2.h  Vector3.h
lib/src/neo/: IApplication.cpp  JSON.cpp  Math.cpp  Terminal.cpp
